examples/test/testpolicy2015.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2015
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key40: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value49
          key2: value21
          key42: value43
      podSelector:
        matchLabels:
          key21: value34
